toList() changed to collect(Collectors.toList()) because with first case code doesn't compile in PR.